--- a/gb/20/10/14/n12474839.md
+++ b/gb/20/10/14/n12474839.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/anghav353/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/anghav353/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/anghav353/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/anghav353/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/anghav353/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/anghav353/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/anghav353/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/anghav353/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/anghav353/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/anghav353/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/anghav353/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/anghav353/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/anghav353/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/anghav353/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/anghav353/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>暂定古迹被撤 台中美军招待所动向惹议</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/91c918270954630f8052b6799e47cd91-600x400.jpg" />
 <h6>为保留历史记忆，环保团体与美国老兵曾多次陈情，希望保留划定为市定古迹或历史建筑，但“暂定古迹”身份于2020年1月仍被取消。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年10月14日讯】（大纪元记者黄玉燕台湾台中报导）台中市西区<ahref="https://github.com/anghav353/djy/blob/master/gb/tag/%E8%81%94%E5%8B%A4%E6%8B%9B%E5%BE%85%E6%89%80.md#1">联勤招待所</a>何去何从？市议员黄守达质疑，联勤招待所暂定<ahref="https://github.com/anghav353/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9.md#1">古迹</a>身份解除后，现址原规划要作“非营利组织及志工中心”，但到目前为止，仍然未见社会局有具体规划与期程，“志工中心到底还有没有要做？”</p>
-<p>台中市西区美村路的<ahref="https://github.com/anghav353/djy/blob/master/gb/tag/%E8%81%94%E5%8B%A4%E6%8B%9B%E5%BE%85%E6%89%80.md#1">联勤招待所</a>建于1962年，早期是<ahref="https://github.com/anghav353/djy/blob/master/gb/tag/%E7%BE%8E%E5%86%9B.md#1">美军</a>俱乐部，后来美军移交国防部军备局，曾委外经营饭店；前总统马英九参选总统全台long?stay时也曾下榻。2006年饭店停业后闲置至今，是台中市民的回忆，也记录冷战时期美军驻台的轨迹。</p>
-<p>为保留历史记忆，环保团体曾多次陈情，希望保留划定为市定<ahref="https://github.com/anghav353/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9.md#1">古迹</a>或历史建筑，但“暂定古迹”身份于2020年1月仍被取消。前市府林佳龙团队上任后，则拟规划为“非营利组织志工中心”。</p>
-<figure id="12474842" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/10/a76e8856afcf07d0df452e7a47e09c60-450x314.jpg" alt="市议员黄守达质疑，台中联勤招待所改建志工中心，到底还有没有要做?" width="500" /><figcaption class="wp-caption-text">市议员黄守达质疑，台中联勤招待所改建志工中心，到底还有没有要做？（黄玉燕／大纪元）</figcaption></figure>
+<p>【大纪元2020年10月14日讯】（大纪元记者黄玉燕台湾台中报导）台中市西区<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%81%94%E5%8B%A4%E6%8B%9B%E5%BE%85%E6%89%80.md#1">联勤招待所</a>何去何从？市议员黄守达质疑，联勤招待所暂定<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9.md#1">古迹</a>身份解除后，现址原规划要作“非营利组织及志工中心”，但到目前为止，仍然未见社会局有具体规划与期程，“志工中心到底还有没有要做？”</p>
+<p>台中市西区美村路的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%81%94%E5%8B%A4%E6%8B%9B%E5%BE%85%E6%89%80.md#1">联勤招待所</a>建于1962年，早期是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BE%8E%E5%86%9B.md#1">美军</a>俱乐部，后来美军移交国防部军备局，曾委外经营饭店；前总统马英九参选总统全台long?stay时也曾下榻。2006年饭店停业后闲置至今，是台中市民的回忆，也记录冷战时期美军驻台的轨迹。</p>
+<p>为保留历史记忆，环保团体曾多次陈情，希望保留划定为市定<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9.md#1">古迹</a>或历史建筑，但“暂定古迹”身份于2020年1月仍被取消。前市府林佳龙团队上任后，则拟规划为“非营利组织志工中心”。</p>
+<figure id="12474842" aria-describedby="caption-12474842" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/10/a76e8856afcf07d0df452e7a47e09c60-450x314.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/10/a76e8856afcf07d0df452e7a47e09c60-450x314.jpg" alt="市议员黄守达质疑，台中联勤招待所改建志工中心，到底还有没有要做?" width="500" /></a><figcaption id="caption-12474842" class="wp-caption-text">市议员黄守达质疑，台中联勤招待所改建志工中心，到底还有没有要做？（黄玉燕／大纪元）</figcaption></figure>
 <p>台中市议会14日民政业务质询，议员黄守达质疑，自2015年开始，“非营利组织及志工中心”相关规划与设计就一改再改，但至少都还有具体的规模与预算，但自暂定古迹身份解除后，社会局就没再给出任何具体规划。</p>
 <p>黄守达指出，志工中心从2015年开始规划，2017年前社会局长吕建德提出地上10楼地下3楼的建设，2018年李允杰局长修正为地上9楼地下3楼。之后从文资审议结果出炉，社会局就没有任何进度，也传出要大幅缩减规模的消息。</p>
 <p>社会局于施政计划提及“2021年目标于年底前完成志工中心的工程发包作业”，但是市政府整部预算书却没有任何预算规划。</p>
@@ -21,48 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/18/11/5/n10830736.md#1">彭斯檄文伐共 “台美友谊”掀寻根热</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/18/11/8/n10837608.md#1">前驻台美军：没有美国、台湾不是今日台湾</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/18/11/8/n10837614.md#1">忆儿时眷村 美国文化走进生活</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/19/11/5/n11634023.md#1">退役美军现身  吁保留台中“美援”招待所</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/1/5/n11769040.md#1">美援“台中美军招待所”判拆 民团控摧毁历史</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/14/n12474876.md#1">保留“蒋公行馆”老树 台中东区社宅开工</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/14/n12474834.md#1">台中水情转黄灯 今起实施夜间减压供水</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/13/n12470825.md#1">追查十余年《铁证如山》揭中共活摘器官暴行</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/13/n12472049.md#1">放映量历年之最 女性导演跨百年影展登场</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12469917.md#1">伪出国秋日盛宴 康百视美食音乐节登场</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/5/n10830736.md#1">彭斯檄文伐共 “台美友谊”掀寻根热</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/8/n10837608.md#1">前驻台美军：没有美国、台湾不是今日台湾</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/8/n10837614.md#1">忆儿时眷村 美国文化走进生活</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/11/5/n11634023.md#1">退役美军现身  吁保留台中“美援”招待所</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/5/n11769040.md#1">美援“台中美军招待所”判拆 民团控摧毁历史</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615830.md#1">中市里长挂看板欢迎蓬佩奥 意外获回文：感谢</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615884.md#1">俄乌战事未明 中市盘点避难室2.4万座</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613300.md#1">侏?纪延伸体验  科博馆认养BRT公车站体</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613305.md#1">中市祭囤房税  3户以下2.4％、4户以上3.6％</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613264.md#1">台中虐婴案重罚  华兴30万、3托育员各15万</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10043633.md#1" target="_blank">叶光庭：共产党把我从“左派”改造成“右派”</a></li><li><a href="https://github.com/anghav353/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/7/n10767290.md#1" target="_blank">美18位参议员联合发声 谴责中共打压宗教</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/29/n11829466.md#1" target="_blank">刘博：别让切尔诺贝利重演</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/9/26/n12433081.md#1">奇人预言“靖康之难”：天星不照 火龙骑日</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/8/n12462258.md#1">香港一名街头歌手的故事</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/10/n12466587.md#1">一群美军士兵称 在韩战时遭UFO以光线攻击</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/10/n12466299.md#1">女子休克时灵魂出窍 看见医生在抢救自己</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/9/24/n12428110.md#1">“自写履历”有多难？醉入冥府见奇闻</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/13/n12473392.md#1">【薇羽看世间】美大法官确认成风暴中心</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12471132.md#1">1张纸改善视力！胡乃文推荐3味药膳 养眼补肾</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/13/n12472449.md#1">【重播】川普宾州演讲：让美国成为能源大国</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12470527.md#1">【一线采访】青岛瞒疫 新疫情十一前已爆发</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12469972.md#1">看好川普连任 专家：美大选民调有两问题</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/11/n12468712.md#1">【独家】南海上演伤亡演习 美中针锋相对</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12469576.md#1">抗癌成功首晒全家福照 余苑绮灿笑：终于达成</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/11/n12468741.md#1">章子怡携女探班汪峰 意外曝光手上硕大钻戒</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12471021.md#1">BTS提韩战惹怒五毛 中共战狼发言人罕见灭火</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/11/n12468501.md#1">疫情下对赌失败 周星驰将与大陆金主对簿公堂</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12471315.md#1">胡歌蹲下来接受采访 暖心举动获称赞</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12469663.md#1">被主人打毒针并活埋 小狗自己挖开坟墓逃出</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12469863.md#1">前美国防部官员：应租F-35战机给台湾抗共</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/12/n12470563.md#1">70岁仍有20岁身材 日医：简单的减糖餐是火锅</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/13/n12472039.md#1">日男夹不到娃娃怒报警 店员试300次也失败</a></li>
-<li><a href="https://github.com/anghav353/djy/blob/master/gb/20/10/13/n12471784.md#1">傻傻分不清？ 法国夫妇买宠物猫 结果是虎崽</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/anghav353/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/anghav353/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/14/n12474839.htm">暂定古迹被撤 台中美军招待所动向惹议</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/14/n12474839.htm">暂定古迹被撤 台中美军招待所动向惹议</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/anghav353/djy/blob/master/gb/20/10/14/n12474839.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/anghav353/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/anghav353/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/anghav353/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/anghav353/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anghav353/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/14/n12474839.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
